tests/machine/x/cpp/pure_global_fold.error
line 54: ../../../tests/machine/x/cpp/pure_global_fold.cpp:54:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   54 | auto inc(auto x) { return (x + k); }
      |          ^~~~
../../../tests/machine/x/cpp/pure_global_fold.cpp: In function ‘auto inc(auto:1)’:
../../../tests/machine/x/cpp/pure_global_fold.cpp:54:32: error: ‘k’ was not declared in this scope
   54 | auto inc(auto x) { return (x + k); }
      |                                ^

 53 | 
 54 | auto inc(auto x) { return (x + k); }
 55 | 
